--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "body-parser": "^1.16.0",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
+    "express": "^4.14.1",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
+	"gulp-eslint": "^3.0.1",
     "gulp-webpack": "^1.5.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^1.16.3"
